[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "rb_tocase"
version = "1.3.2"
description = "RB toCase is a Case converter."
authors = ["RickBarretto"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/RickBarretto/toCase"
classifiers=[
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Topic :: Text Editors :: Text Processing",
    "Topic :: Text Editors :: Word Processors",
    "Topic :: Text Processing"
]


[tool.poetry.dev-dependencies]
build = "0.7.0"
setuptools = "^57.4.0"
pdoc = "^8.0.1"

[tool.poetry.dev-dependencies.black]
version = "^21.12b0"
allow-prereleases = true
python = "^3.6"
markers = "platform_python_implementation == 'CPython'"